set sass variables

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,18 @@
+// font colors
 $fontColor-1: #DCF10D;
 $fontColor-2: #FFFFFF;
 $fontColor-3: #9D9DB5;
 $fontColor-4: #0266FF;
 $fontColor-5: #10131C;
+$fontColor-6: #192140;
+
+// background colors
+$bgColor-1: #192140;
+$bgcolor-2: #10131C;
+
+// font style
+$main-font: 'Inter';
+$font-size1: 24px;
+$font-size2: 16px;
+$font-size3: 20px;
+$font-size4: 12px;
