--- a/main-css/main.css
+++ b/main-css/main.css
@@ -1,4 +1,67 @@
 * {
   margin: 0%;
   padding: 0%;
+  font-family: "Inter", sans-serif;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+nav {
+  background-color: #192140;
+  width: 100vw;
+  height: 84px;
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+}
+
+.logo {
+  color: #DCF10D;
+  font-weight: 700;
+  font-size: 24px;
+  position: absolute;
+  letter-spacing: 0.1em;
+  line-height: 29px;
+  width: 76px;
+  height: 17px;
+  left: 80px;
+  top: 27px;
+}
+
+.menu {
+  float: right;
+  margin: auto;
+  margin-right: 20px;
+}
+
+nav ul li {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li a {
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.blog {
+  color: #DCF10D;
+  text-decoration: underline;
+}
+
+.sign-up {
+  color: #9D9DB5;
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.log-in {
+  color: #0266FF;
+  font-weight: 600;
+  font-size: 16px;
 }/*# sourceMappingURL=main.css.map */
