--- a/main-css/main.css
+++ b/main-css/main.css
@@ -7,14 +7,11 @@
 }
 
 nav {
+  display: flex;
   background-color: #192140;
   width: 100vw;
   height: 84px;
   position: absolute;
-  left: 0%;
-  right: 0%;
-  top: 0%;
-  bottom: 0%;
 }
 
 .logo {
@@ -31,13 +28,22 @@ nav {
 }
 
 .menu {
-  float: right;
-  margin: auto;
-  margin-right: 20px;
+  display: flex;
+  position: absolute;
+  text-align: center;
+  right: 304px;
+  gap: 30px;
+}
+
+.sign-log {
+  display: flex;
+  position: absolute;
+  gap: 10px;
+  right: 100px;
+  letter-spacing: -0.01em;
 }
 
 nav ul li {
-  display: inline-block;
   line-height: 80px;
   margin: 0 5px;
 }
@@ -61,6 +67,9 @@ nav ul li a {
 }
 
 .log-in {
+  border: solid 1px;
+  border-radius: 50px;
+  padding: 16px;
   color: #0266FF;
   font-weight: 600;
   font-size: 16px;
