--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
 // font formats
-$main-font: 'Inter', sans-serif;
-$fontColor-1: #DCF10D;
-$fontColor-2: #FFFFFF;
-$fontColor-3: #9D9DB5;
-$fontColor-4: #0266FF;
-$fontColor-5: #10131C;
+$main-font: "Inter", sans-serif;
+$fontColor-1: #dcf10d;
+$fontColor-2: #ffffff;
+$fontColor-3: #9d9db5;
+$fontColor-4: #0266ff;
+$fontColor-5: #10131c;
 $fontColor-6: #192140;
 $font-size1: 12px;
 $font-size2: 15px;
@@ -23,4 +23,5 @@ $font-weight9: 900;
 
 // background colors
 $bgColor-1: #192140;
-$bgcolor-2: #10131C;
+$bgcolor-2: #10131c;
+$bgColor-3: #f8f9fc;
