--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,6 +1,6 @@
-@mixin nav-menu(){
-    color: #FFFFFF;
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
+@mixin nav-menu() {
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
 }
