--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -74,3 +74,27 @@ nav ul li a {
   font-weight: variables.$font-weight6;
   font-size: variables.$font-size3;
 }
+
+main {
+  display: grid;
+}
+
+.card-1 {
+  background-color: $bgColor-3;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+}
+
+.card {
+  width: 320px;
+  height: 250px;
+  border-radius: 8px;
+}
+
+.img-card1 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: auto;
+}
