--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -23,5 +23,5 @@ $font-weight9: 900;
 
 // background colors
 $bgColor-1: #192140;
-$bgcolor-2: #10131c;
+$bgColor-2: #10131c;
 $bgColor-3: #f8f9fc;
