--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -80,7 +80,7 @@ main {
 }
 
 .card-1 {
-  background-color: $bgColor-3;
+  background-color: variables.$bgColor-3;
   position: absolute;
   top: 100px;
   left: 100px;
@@ -97,4 +97,34 @@ main {
   border-top-right-radius: 6px;
   width: 100%;
   height: auto;
+}
+
+.card1-content {
+  color: variables.$bgColor-2;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+  gap: 10px;
+}
+
+.circle-x {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.circle-check {
+  color: variables.$fontColor-6;
+}
+
+.card-footer {
+  display: flex;
+  justify-content: space-between;
+  color: variables.$fontColor-3;
+}
+
+.date {
+  border: solid 1px;
+  border-radius: 50px;
+  padding: 5px;
 }
