--- a/main-css/main.css
+++ b/main-css/main.css
@@ -80,6 +80,7 @@ main {
 }
 
 .card-1 {
+  background-color: #f8f9fc;
   position: absolute;
   top: 100px;
   left: 100px;
@@ -96,10 +97,34 @@ main {
   border-top-right-radius: 6px;
   width: 100%;
   height: auto;
-} /*# sourceMappingURL=main.css.map */
+}
+
+.card1-content {
+  color: #10131c;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+  gap: 10px;
+}
 
 .circle-x {
   position: absolute;
   top: 10px;
   right: 10px;
 }
+
+.circle-check {
+  color: #192140;
+}
+
+.card-footer {
+  display: flex;
+  justify-content: space-between;
+  color: #9d9db5;
+}
+
+.date {
+  border: solid 1px;
+  border-radius: 50px;
+  padding: 5px;
+}/*# sourceMappingURL=main.css.map */
