--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,6 +6,7 @@ $fontColor-3: #9d9db5;
 $fontColor-4: #0266ff;
 $fontColor-5: #10131c;
 $fontColor-6: #192140;
+$fontColor-7: #d7f8ff;
 $font-size1: 12px;
 $font-size2: 15px;
 $font-size3: 16px;
