--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,7 +14,8 @@ nav {
   background-color: variables.$bgColor-1;
   width: 100vw;
   height: 84px;
-  position: absolute;
+  position: fixed;
+  z-index: 1;
 }
 
 .logo {
@@ -118,9 +119,15 @@ main {
   color: variables.$fontColor-6;
 }
 
+.heart {
+  width: 16px;
+  height: 14px;
+}
+
 .card-footer {
   display: flex;
   justify-content: space-between;
+  font-size: 12px;
   color: variables.$fontColor-3;
 }
 
@@ -134,4 +141,87 @@ footer {
   width: 100vw;
   height: 274px;
   background-color: variables.$bgColor-2;
+}
+
+.section-blog {
+  display: flex;
+  padding: 60px 60px 30px 60px;
+  justify-content: space-between;
+  color: variables.$fontColor-7;
+}
+
+.footer-blog p {
+  font-weight: variables.$font-weight7;
+  color: variables.$fontColor-2;
+  letter-spacing: -0.02em;
+  font-size: 16px;
+}
+
+.footer-blog ul {
+  display: flex;
+  gap: 20px;
+  padding-top: 20px;
+  font-size: 12px;
+  letter-spacing: -0.03em;
+  line-height: 130%;
+  font-weight: variables.$font-weight4;
+}
+
+.socmed-links p {
+  font-size: 12px;
+  letter-spacing: -0.02em;
+  line-height: 130%;
+  font-weight: variables.$font-weight4;
+  color: variables.$fontColor-2;
+}
+
+.socmed-links ul {
+  display: flex;
+  gap: 20px;
+  padding-top: 20px;
+}
+
+.socmed {
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
+  background-color: variables.$bgColor-1;
+}
+
+.section-courses {
+  display: flex;
+  padding: 0 60px 60px 60px;
+  justify-content: space-between;
+  color: variables.$fontColor-7;
+}
+
+.section-courses ul {
+  display: flex;
+  gap: 20px;
+  padding-top: 20px;
+}
+
+.footer-courses p {
+  color: variables.$fontColor-2;
+  font-weight: variables.$font-weight7;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  line-height: 130%;
+}
+
+.footer-courses ul {
+  font-size: 12px;
+  font-weight: variables.$font-weight4;
+  color: variables.$fontColor-7;
+  line-height: 130%;
+  letter-spacing: -0.03em;
+}
+
+.footer-privacy ul {
+  font-size: 12px;
+  font-weight: 400;
+  color: #ffffff;
+  opacity: 0.4;
+  letter-spacing: -0.03em;
+  line-height: 130%;
 }
