--- a/main-css/main.css
+++ b/main-css/main.css
@@ -11,7 +11,8 @@ nav {
   background-color: #192140;
   width: 100vw;
   height: 84px;
-  position: absolute;
+  position: fixed;
+  z-index: 1;
 }
 
 .logo {
@@ -118,9 +119,15 @@ main {
   color: #192140;
 }
 
+.heart {
+  width: 16px;
+  height: 14px;
+}
+
 .card-footer {
   display: flex;
   justify-content: space-between;
+  font-size: 12px;
   color: #9d9db5;
 }
 
@@ -134,4 +141,87 @@ footer {
   width: 100vw;
   height: 274px;
   background-color: #10131c;
+}
+
+.section-blog {
+  display: flex;
+  padding: 60px 60px 30px 60px;
+  justify-content: space-between;
+  color: #d7f8ff;
+}
+
+.footer-blog p {
+  font-weight: 700;
+  color: #ffffff;
+  letter-spacing: -0.02em;
+  font-size: 16px;
+}
+
+.footer-blog ul {
+  display: flex;
+  gap: 20px;
+  padding-top: 20px;
+  font-size: 12px;
+  letter-spacing: -0.03em;
+  line-height: 130%;
+  font-weight: 400;
+}
+
+.socmed-links p {
+  font-size: 12px;
+  letter-spacing: -0.02em;
+  line-height: 130%;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+.socmed-links ul {
+  display: flex;
+  gap: 20px;
+  padding-top: 20px;
+}
+
+.socmed {
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
+  background-color: #192140;
+}
+
+.section-courses {
+  display: flex;
+  padding: 0 60px 60px 60px;
+  justify-content: space-between;
+  color: #d7f8ff;
+}
+
+.section-courses ul {
+  display: flex;
+  gap: 20px;
+  padding-top: 20px;
+}
+
+.footer-courses p {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  line-height: 130%;
+}
+
+.footer-courses ul {
+  font-size: 12px;
+  font-weight: 400;
+  color: #d7f8ff;
+  line-height: 130%;
+  letter-spacing: -0.03em;
+}
+
+.footer-privacy ul {
+  font-size: 12px;
+  font-weight: 400;
+  color: #ffffff;
+  opacity: 0.4;
+  letter-spacing: -0.03em;
+  line-height: 130%;
 }/*# sourceMappingURL=main.css.map */
