changed card images

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,12 +1,5 @@
 // font formats
 $main-font: "Inter", sans-serif;
-$fontColor-1: #dcf10d;
-$fontColor-2: #ffffff;
-$fontColor-3: #9d9db5;
-$fontColor-4: #0266ff;
-$fontColor-5: #10131c;
-$fontColor-6: #192140;
-$fontColor-7: #d7f8ff;
 $font-size1: 12px;
 $font-size2: 15px;
 $font-size3: 16px;
@@ -22,7 +15,13 @@ $font-weight7: 700;
 $font-weight8: 800;
 $font-weight9: 900;
 
-// background colors
-$bgColor-1: #192140;
-$bgColor-2: #10131c;
-$bgColor-3: #f8f9fc;
+// colors
+$color-1: #192140;
+$color-2: #10131c;
+$color-3: #f8f9fc;
+$color-4: #dcf10d;
+$color-5: #ffffff;
+$color-6: #9d9db5;
+$color-7: #0266ff;
+$color-8: #10131c;
+$color-9: #d7f8ff;
