--- a/main-css/main.css
+++ b/main-css/main.css
@@ -91,14 +91,106 @@ main {
   height: 250px;
   border-radius: 8px;
   position: absolute;
+  background-color: #f8f9fc;
 }
 
-.img-card {
-  background-color: #f8f9fc;
+.img-card1 {
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
   width: 100%;
-  height: auto;
+  height: 70%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 30%;
+     object-position: 0 30%;
+}
+
+.img-card2 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 80%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 40%;
+     object-position: 0 40%;
+}
+
+.img-card3 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 70%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 0%;
+     object-position: 0 0%;
+}
+
+.img-card4 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 60%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 1%;
+     object-position: 0 1%;
+}
+
+.img-card5 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 70%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
+}
+
+.img-card6 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 70%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
+}
+
+.img-card7 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 85%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
+}
+
+.img-card8 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 66%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 1%;
+     object-position: 0 1%;
+}
+
+.img-card9 {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  height: 75%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
 }
 
 .card-content {
