--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -53,7 +53,10 @@ nav ul li {
 }
 
 nav ul li a {
-  @include mixins.nav-menu();
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
 }
 
 .blog {
@@ -95,84 +98,39 @@ main {
 }
 
 .img-card1 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 70%;
-  object-fit: cover;
-  object-position: 0 30%;
+  @include mixins.card-img($img-height: 70%, $img-position: 0 30%);
 }
 
 .img-card2 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 80%;
-  object-fit: cover;
-  object-position: 0 40%;
+  @include mixins.card-img($img-height: 80%, $img-position: 0 40%);
 }
 
 .img-card3 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 70%;
-  object-fit: cover;
-  object-position: 0 0%;
+  @include mixins.card-img($img-height: 70%);
 }
 
 .img-card4 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 60%;
-  object-fit: cover;
-  object-position: 0 1%;
+  @include mixins.card-img($img-height: 60%, $img-position: 0 1%);
 }
 
 .img-card5 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 70%;
-  object-fit: cover;
-  object-position: 0 5%;
+  @include mixins.card-img($img-height: 70%, $img-position: 0 5%);
 }
 
 .img-card6 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 70%;
-  object-fit: cover;
-  object-position: 0 5%;
+  @include mixins.card-img($img-height: 70%, $img-position: 0 5%);
 }
 
 .img-card7 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 85%;
-  object-fit: cover;
-  object-position: 0 5%;
+  @include mixins.card-img($img-height: 85%, $img-position: 0 5%);
 }
 
 .img-card8 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 66%;
-  object-fit: cover;
-  object-position: 0 1%;
+  @include mixins.card-img($img-height: 66%, $img-position: 0 1%);
 }
 
 .img-card9 {
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  width: 100%;
-  height: 75%;
-  object-fit: cover;
-  object-position: 0 5%;
+  @include mixins.card-img($img-height: 75%, $img-position: 0 5%);
 }
 
 .card-content {
