--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -80,6 +80,7 @@ nav ul li a {
 }
 
 main {
+  height: auto;
   justify-content: center;
   padding-top: 150px;
   padding-bottom: 60px;
@@ -173,26 +174,22 @@ main {
 }
 
 footer {
+  display: flex;
+  justify-content: space-between;
   width: 100vw;
   height: 274px;
   background-color: variables.$color-2;
+  padding: 60px 60px 30px 60px;
 }
 
 .section-blog {
   display: flex;
-  padding: 60px 60px 30px 60px;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 40px;
   color: variables.$color-9;
 }
 
-.footer-blog p {
-  font-weight: variables.$font-weight7;
-  color: variables.$color-5;
-  letter-spacing: -0.02em;
-  font-size: 16px;
-}
-
-.footer-blog ul {
+.section-blog ul {
   display: flex;
   gap: 20px;
   padding-top: 20px;
@@ -200,12 +197,25 @@ footer {
   letter-spacing: -0.03em;
   line-height: 130%;
   font-weight: variables.$font-weight4;
+  color: variables.$color-9;
+}
+
+.section-blog p {
+  font-weight: variables.$font-weight7;
+  color: variables.$color-5;
+  letter-spacing: -0.02em;
+  font-size: 16px;
+}
+
+.follow-us {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .socmed-links p {
   font-size: 12px;
   letter-spacing: -0.02em;
-  line-height: 130%;
   font-weight: variables.$font-weight4;
   color: variables.$color-5;
 }
@@ -224,48 +234,57 @@ footer {
   vertical-align: middle;
   border-radius: 50px;
   background-color: variables.$color-1;
-}
-
-.section-courses {
-  display: flex;
-  padding: 0 60px 60px 60px;
-  justify-content: space-between;
-  color: variables.$color-9;
-}
-
-.footer-courses ul {
-  display: flex;
-  gap: 20px;
-  padding-top: 20px;
+  color: variables.$color-5;
 }
 
 .footer-privacy ul {
+  float: right;
   display: flex;
   gap: 10px;
   padding-top: 20px;
-}
-
-.footer-courses p {
-  color: variables.$color-5;
-  font-weight: variables.$font-weight7;
-  font-size: 16px;
-  letter-spacing: -0.02em;
-  line-height: 130%;
-}
-
-.footer-courses ul {
-  font-size: 12px;
-  font-weight: variables.$font-weight4;
-  color: variables.$color-9;
-  line-height: 130%;
-  letter-spacing: -0.03em;
-}
-
-.footer-privacy ul {
   font-size: 12px;
   font-weight: 400;
   color: variables.$color-5;
   opacity: 0.4;
   letter-spacing: -0.03em;
-  line-height: 130%;
+}
+
+@media only screen and (max-width: 1100px) {
+  main {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: 320px 320px;
+    grid-template-rows: 350px 350px 350px 350px 350px;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: auto;
+    gap: 40px;
+  }
+
+  .follow-us {
+    gap: 10px;
+  }
+
+  .footer-privacy ul {
+    float: left;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  main {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: 320px;
+    grid-template-rows: 350px 350px 350px 350px 350px 350px 350px 350px 350px;
+  }
+
+  .footer-blog ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 }
