--- a/main-css/main.css
+++ b/main-css/main.css
@@ -77,6 +77,7 @@ nav ul li a {
 }
 
 main {
+  height: auto;
   justify-content: center;
   padding-top: 150px;
   padding-bottom: 60px;
@@ -233,26 +234,22 @@ main {
 }
 
 footer {
+  display: flex;
+  justify-content: space-between;
   width: 100vw;
   height: 274px;
   background-color: #10131c;
+  padding: 60px 60px 30px 60px;
 }
 
 .section-blog {
   display: flex;
-  padding: 60px 60px 30px 60px;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 40px;
   color: #d7f8ff;
 }
 
-.footer-blog p {
-  font-weight: 700;
-  color: #ffffff;
-  letter-spacing: -0.02em;
-  font-size: 16px;
-}
-
-.footer-blog ul {
+.section-blog ul {
   display: flex;
   gap: 20px;
   padding-top: 20px;
@@ -260,12 +257,25 @@ footer {
   letter-spacing: -0.03em;
   line-height: 130%;
   font-weight: 400;
+  color: #d7f8ff;
+}
+
+.section-blog p {
+  font-weight: 700;
+  color: #ffffff;
+  letter-spacing: -0.02em;
+  font-size: 16px;
+}
+
+.follow-us {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .socmed-links p {
   font-size: 12px;
   letter-spacing: -0.02em;
-  line-height: 130%;
   font-weight: 400;
   color: #ffffff;
 }
@@ -284,48 +294,52 @@ footer {
   vertical-align: middle;
   border-radius: 50px;
   background-color: #192140;
-}
-
-.section-courses {
-  display: flex;
-  padding: 0 60px 60px 60px;
-  justify-content: space-between;
-  color: #d7f8ff;
-}
-
-.footer-courses ul {
-  display: flex;
-  gap: 20px;
-  padding-top: 20px;
+  color: #ffffff;
 }
 
 .footer-privacy ul {
+  float: right;
   display: flex;
   gap: 10px;
   padding-top: 20px;
-}
-
-.footer-courses p {
-  color: #ffffff;
-  font-weight: 700;
-  font-size: 16px;
-  letter-spacing: -0.02em;
-  line-height: 130%;
-}
-
-.footer-courses ul {
-  font-size: 12px;
-  font-weight: 400;
-  color: #d7f8ff;
-  line-height: 130%;
-  letter-spacing: -0.03em;
-}
-
-.footer-privacy ul {
   font-size: 12px;
   font-weight: 400;
   color: #ffffff;
   opacity: 0.4;
   letter-spacing: -0.03em;
-  line-height: 130%;
+}
+
+@media only screen and (max-width: 1100px) {
+  main {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: 320px 320px;
+    grid-template-rows: 350px 350px 350px 350px 350px;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: auto;
+    gap: 40px;
+  }
+  .follow-us {
+    gap: 10px;
+  }
+  .footer-privacy ul {
+    float: left;
+  }
+}
+@media only screen and (max-width: 760px) {
+  main {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: 320px;
+    grid-template-rows: 350px 350px 350px 350px 350px 350px 350px 350px 350px;
+  }
+  .footer-blog ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 }/*# sourceMappingURL=main.css.map */
