minor changes in cards properties

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -18,6 +18,14 @@ nav {
   z-index: 1;
 }
 
+.circle-x {
+  color: variables.$color-10;
+}
+
+.circle-check {
+  color: variables.$color-1;
+}
+
 .logo {
   color: variables.$color-4;
   font-weight: variables.$font-weight7;
