--- a/main-css/main.css
+++ b/main-css/main.css
@@ -15,6 +15,14 @@ nav {
   z-index: 1;
 }
 
+.circle-x {
+  color: #9d9db5;
+}
+
+.circle-check {
+  color: #192140;
+}
+
 .logo {
   color: #dcf10d;
   font-weight: 700;
