--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -16,55 +16,43 @@ nav {
   height: 84px;
   position: fixed;
   z-index: 1;
-}
-
-.circle-x {
-  color: variables.$color-10;
-}
-
-.circle-check {
-  color: variables.$color-1;
-}
-
-.logo {
-  color: variables.$color-4;
-  font-weight: variables.$font-weight7;
-  font-size: variables.$font-size4;
-  position: absolute;
-  letter-spacing: 0.1em;
-  line-height: 29px;
-  width: 76px;
-  height: 17px;
-  left: 80px;
-  top: 27px;
-}
-
-.menu {
-  display: flex;
-  position: absolute;
-  text-align: center;
-  right: 304px;
-  gap: 30px;
-}
-
-.sign-log {
-  display: flex;
-  position: absolute;
-  gap: 10px;
-  right: 100px;
-  letter-spacing: -0.01em;
+  .logo {
+    color: variables.$color-4;
+    font-weight: variables.$font-weight7;
+    font-size: variables.$font-size4;
+    position: absolute;
+    letter-spacing: 0.1em;
+    line-height: 29px;
+    width: 76px;
+    height: 17px;
+    left: 80px;
+    top: 27px;
+  }
+  .menu {
+    display: flex;
+    position: absolute;
+    text-align: center;
+    right: 304px;
+    gap: 30px;
+  }
+  .sign-log {
+    display: flex;
+    position: absolute;
+    gap: 10px;
+    right: 100px;
+    letter-spacing: -0.01em;
+  }
 }
 
 nav ul li {
   line-height: 80px;
   margin: 0 5px;
-}
-
-nav ul li a {
-  color: #ffffff;
-  font-weight: 500;
-  font-size: 16px;
-  text-decoration: none;
+  a {
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 16px;
+    text-decoration: none;
+  }
 }
 
 .blog {
@@ -98,87 +86,82 @@ main {
   grid-template-rows: 350px 350px 350px;
 }
 
-.card-container {
+.myCard-cont {
   background-color: variables.$color-3;
-}
-
-.card {
-  width: 320px;
-  height: 250px;
-  border-radius: 8px;
-  position: absolute;
-}
-
-.img-card1 {
-  @include mixins.card-img($img-height: 70%, $img-position: 0 30%);
-}
-
-.img-card2 {
-  @include mixins.card-img($img-height: 80%, $img-position: 0 40%);
-}
-
-.img-card3 {
-  @include mixins.card-img($img-height: 70%);
-}
-
-.img-card4 {
-  @include mixins.card-img($img-height: 60%, $img-position: 0 1%);
-}
-
-.img-card5 {
-  @include mixins.card-img($img-height: 70%, $img-position: 0 5%);
-}
-
-.img-card6 {
-  @include mixins.card-img($img-height: 70%, $img-position: 0 5%);
-}
-
-.img-card7 {
-  @include mixins.card-img($img-height: 85%, $img-position: 0 5%);
-}
-
-.img-card8 {
-  @include mixins.card-img($img-height: 66%, $img-position: 0 1%);
-}
-
-.img-card9 {
-  @include mixins.card-img($img-height: 75%, $img-position: 0 5%);
-}
-
-.card-content {
-  color: variables.$color-2;
-  display: flex;
-  flex-direction: column;
-  padding: 10px 20px;
-  gap: 10px;
-}
-
-.circle-x {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-.circle-check {
-  color: variables.$color-1;
-}
-
-.heart {
-  width: 16px;
-  height: 14px;
-}
-
-.card-footer {
-  display: flex;
-  justify-content: space-between;
-  font-size: 12px;
-  color: variables.$color-6;
-}
-
-.date {
-  border: solid 1px;
-  border-radius: 50px;
-  padding: 5px;
+  border-radius: 6px;
+  .circle-x {
+    color: variables.$color-6;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  .circle-check {
+    color: variables.$color-1;
+  }
+  .myCard {
+    width: 320px;
+    height: 250px;
+    border-radius: 8px;
+    position: absolute;
+  }
+  .img-card1 {
+    @include mixins.card-img($img-height: 65%, $img-position: 0 30%);
+  }
+  .img-card2 {
+    @include mixins.card-img($img-height: 76%, $img-position: 0 40%);
+  }
+  .img-card3 {
+    @include mixins.card-img($img-height: 65%);
+  }
+  .img-card4 {
+    @include mixins.card-img($img-height: 65%, $img-position: 0 1%);
+  }
+  .img-card5 {
+    @include mixins.card-img($img-height: 76%, $img-position: 0 5%);
+  }
+  .img-card6 {
+    @include mixins.card-img($img-height: 76%, $img-position: 0 5%);
+  }
+  .img-card7 {
+    @include mixins.card-img($img-height: 90%, $img-position: 0 5%);
+  }
+  .img-card8 {
+    @include mixins.card-img($img-height: 66%, $img-position: 0 1%);
+  }
+  .img-card9 {
+    @include mixins.card-img($img-height: 76%, $img-position: 0 5%);
+  }
+  .card-content {
+    color: variables.$color-2;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px;
+    gap: 10px;
+    p {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 20px;
+      color: variables.$color-2;
+      margin-bottom: 0;
+    }
+    hr {
+      margin: 0;
+    }
+  }
+  .card-footer {
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    .date {
+      color: variables.$color-6;
+      border: solid 1px;
+      border-radius: 50px;
+      padding: 2px 7px;
+    }
+    .heart {
+      color: variables.$color-6;
+    }
+  }
 }
 
 footer {
@@ -193,26 +176,25 @@ footer {
 .section-blog {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  color: variables.$color-9;
-}
-
-.section-blog ul {
-  display: flex;
   gap: 20px;
-  padding-top: 20px;
-  font-size: 12px;
-  letter-spacing: -0.03em;
-  line-height: 130%;
-  font-weight: variables.$font-weight4;
   color: variables.$color-9;
-}
-
-.section-blog p {
-  font-weight: variables.$font-weight7;
-  color: variables.$color-5;
-  letter-spacing: -0.02em;
-  font-size: 16px;
+  p {
+    font-weight: variables.$font-weight7;
+    color: variables.$color-5;
+    letter-spacing: -0.02em;
+    font-size: 16px;
+  }
+  ul {
+    display: flex;
+    gap: 20px;
+    padding-top: 20px;
+    padding-left: 0;
+    font-size: 12px;
+    letter-spacing: -0.03em;
+    line-height: 130%;
+    font-weight: variables.$font-weight4;
+    color: variables.$color-9;
+  }
 }
 
 .follow-us {
@@ -221,17 +203,19 @@ footer {
   gap: 40px;
 }
 
-.socmed-links p {
-  font-size: 12px;
-  letter-spacing: -0.02em;
-  font-weight: variables.$font-weight4;
-  color: variables.$color-5;
-}
-
-.socmed-links ul {
-  display: flex;
-  gap: 20px;
-  padding-top: 20px;
+.socmed-links {
+  p {
+    font-size: 12px;
+    letter-spacing: -0.02em;
+    font-weight: variables.$font-weight4;
+    color: variables.$color-5;
+  }
+  ul {
+    display: flex;
+    gap: 20px;
+    padding-top: 20px;
+    padding-left: 0;
+  }
 }
 
 .socmed {
@@ -279,6 +263,7 @@ footer {
 
   .footer-privacy ul {
     float: left;
+    padding-left: 0;
   }
 }
 
