--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,6 +32,7 @@ nav {
     display: flex;
     position: absolute;
     text-align: center;
+    top: 1px;
     right: 304px;
     gap: 30px;
   }
@@ -39,6 +40,7 @@ nav {
     display: flex;
     position: absolute;
     gap: 10px;
+    top: 1px;
     right: 100px;
     letter-spacing: -0.01em;
   }
@@ -170,13 +172,13 @@ footer {
   width: 100vw;
   height: 274px;
   background-color: variables.$color-2;
-  padding: 60px 60px 30px 60px;
+  padding: 60px 60px;
 }
 
 .section-blog {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
   color: variables.$color-9;
   p {
     font-weight: variables.$font-weight7;
@@ -187,7 +189,6 @@ footer {
   ul {
     display: flex;
     gap: 20px;
-    padding-top: 20px;
     padding-left: 0;
     font-size: 12px;
     letter-spacing: -0.03em;
@@ -213,7 +214,6 @@ footer {
   ul {
     display: flex;
     gap: 20px;
-    padding-top: 20px;
     padding-left: 0;
   }
 }
