--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -78,9 +78,9 @@ nav ul li {
 }
 
 main {
-  height: auto;
+  // height: auto;
   justify-content: center;
-  padding-top: 150px;
+  padding-top: 60px;
   padding-bottom: 60px;
   display: grid;
   gap: 40px;
@@ -275,9 +275,22 @@ footer {
     grid-template-rows: 350px 350px 350px 350px 350px 350px 350px 350px 350px;
   }
 
+  footer {
+    padding: 40px 30px;
+  }
+
   .footer-blog ul {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  main {
+    padding: 30px 0;
+  }
+  .socmed-links ul {
     gap: 10px;
   }
 }
