--- a/main-css/main.css
+++ b/main-css/main.css
@@ -75,9 +75,8 @@ nav ul li a {
 }
 
 main {
-  height: auto;
   justify-content: center;
-  padding-top: 150px;
+  padding-top: 60px;
   padding-bottom: 60px;
   display: grid;
   gap: 40px;
@@ -328,9 +327,20 @@ footer {
     grid-template-columns: 320px;
     grid-template-rows: 350px 350px 350px 350px 350px 350px 350px 350px 350px;
   }
+  footer {
+    padding: 40px 30px;
+  }
   .footer-blog ul {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+  }
+}
+@media only screen and (max-width: 370px) {
+  main {
+    padding: 30px 0;
+  }
+  .socmed-links ul {
     gap: 10px;
   }
 }/*# sourceMappingURL=main.css.map */
