--- a/main-css/main.css
+++ b/main-css/main.css
@@ -14,6 +14,10 @@ nav {
   position: fixed;
   z-index: 1;
 }
+nav button {
+  position: absolute;
+  right: 50px;
+}
 nav .logo {
   color: #dcf10d;
   font-weight: 700;
@@ -32,7 +36,7 @@ nav .menu {
   text-align: center;
   top: 1px;
   right: 304px;
-  gap: 30px;
+  gap: 10px;
 }
 nav .sign-log {
   display: flex;
