--- a/main-css/main.css
+++ b/main-css/main.css
@@ -217,13 +217,13 @@ main {
 .myCard-cont .card-footer {
   display: flex;
   justify-content: space-between;
-  font-size: 12px;
 }
 .myCard-cont .card-footer .date {
   color: #9d9db5;
   border: solid 1px;
   border-radius: 50px;
   padding: 2px 7px;
+  font-size: 50px;
 }
 .myCard-cont .card-footer .heart {
   color: #9d9db5;
@@ -347,4 +347,7 @@ footer {
   .socmed-links ul {
     gap: 10px;
   }
+}
+.favorite {
+  color: blue;
 }/*# sourceMappingURL=main.css.map */
