--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -83,7 +83,7 @@ nav ul li {
 
 main {
   justify-content: center;
-  padding-top: 160px;
+  padding-top: 50px;
   padding-bottom: 60px;
   display: grid;
   gap: 40px;
@@ -275,30 +275,41 @@ footer {
   main {
     display: grid;
     gap: 40px;
+    padding-top: 50px;
     grid-template-columns: 320px;
     grid-template-rows: 350px 350px 350px 350px 350px 350px 350px 350px 350px;
   }
-
   footer {
     padding: 40px 30px;
   }
-
   .footer-blog ul {
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
+  nav button {
+    right: 15px;
+  }
+  nav .logo {
+    left: 15px;
+  }
 }
 
 @media only screen and (max-width: 370px) {
   main {
-    padding-top: 120px;
+    padding-top: 50px;
   }
   .socmed-links ul {
     gap: 10px;
   }
+  nav button {
+    right: 15px;
+  }
+  nav .logo {
+    left: 15px;
+  }
 }
 
-.favorite {
-  color: blue;
+.like {
+  color: variables.$color-7;
 }
