--- a/main-css/main.css
+++ b/main-css/main.css
@@ -7,75 +7,32 @@
 }
 
 nav {
-  display: flex;
   background-color: #192140;
-  width: 100vw;
-  height: 84px;
-  position: fixed;
-  z-index: 1;
 }
-nav button {
-  position: absolute;
-  right: 50px;
-}
-nav .logo {
+nav .navbar-brand {
   color: #dcf10d;
   font-weight: 700;
   font-size: 24px;
-  position: absolute;
-  letter-spacing: 0.1em;
-  line-height: 29px;
-  width: 76px;
-  height: 17px;
-  left: 80px;
-  top: 27px;
 }
-nav .menu {
-  display: flex;
-  position: absolute;
-  text-align: center;
-  top: 1px;
-  right: 304px;
-  gap: 10px;
+nav .navbar-brand:hover {
+  color: #dcf10d;
 }
-nav .sign-log {
-  display: flex;
-  position: absolute;
-  gap: 10px;
-  top: 1px;
-  right: 100px;
-  letter-spacing: -0.01em;
+nav .navbar-nav .nav-link.blog {
+  color: #dcf10d;
+  text-decoration: underline;
+  font-weight: 500;
+  font-size: 16px;
 }
-
-nav ul li {
-  line-height: 80px;
-  margin: 0 5px;
-}
-nav ul li a {
+nav .nav-item .nav-link {
   color: #ffffff;
   font-weight: 500;
   font-size: 16px;
-  text-decoration: none;
 }
-
-.blog {
-  color: #dcf10d;
-  text-decoration: underline;
+nav .navbar-toggler {
+  border-color: #dcf10d;
 }
-
-.sign-up {
-  color: #9d9db5;
-  font-weight: 700;
-  font-size: 16px;
-}
-
-.log-in {
-  border: solid 1px;
-  border-radius: 50px;
-  padding: 16px;
-  color: #0266ff;
-  font-weight: 600;
-  font-size: 16px;
+nav .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28220, 241, 13, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 main {
