--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -36,8 +36,19 @@ nav {
   .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28220, 241, 13, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   }
+  .nav-item .nav-link.sign {
+    font-weight: variables.$font-weight7;
+    color: variables.$color-6;
+  }
+  .nav-item .nav-link.log {
+    color: variables.$color-7;
+    border: solid 1px variables.$color-7;
+    border-radius: 50px;
+    padding: 10px;
+  }
 }
 
+// nav w/o bootstrap
 // nav {
 //   display: flex;
 //   background-color: variables.$color-1;
