--- a/main-css/main.css
+++ b/main-css/main.css
@@ -205,49 +205,42 @@ footer {
   background-color: #10131c;
   padding: 60px 60px;
 }
-
-.section-blog {
+footer .section-blog {
   display: flex;
   flex-direction: column;
   gap: 40px;
   color: #d7f8ff;
 }
-.section-blog p {
+footer .section-blog p {
   font-weight: 700;
   color: #ffffff;
-  letter-spacing: -0.02em;
   font-size: 16px;
 }
-.section-blog ul {
+footer .section-blog ul {
   display: flex;
   gap: 20px;
   padding-left: 0;
   font-size: 12px;
-  letter-spacing: -0.03em;
   line-height: 130%;
   font-weight: 400;
   color: #d7f8ff;
 }
-
-.follow-us {
+footer .follow-us {
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
-
-.socmed-links p {
+footer .follow-us .socmed-links p {
   font-size: 12px;
-  letter-spacing: -0.02em;
   font-weight: 400;
   color: #ffffff;
 }
-.socmed-links ul {
+footer .follow-us .socmed-links ul {
   display: flex;
   gap: 20px;
   padding-left: 0;
 }
-
-.socmed {
+footer .socmed {
   height: 30px;
   width: 30px;
   padding: 7px;
@@ -267,7 +260,6 @@ footer {
   font-weight: 400;
   color: #ffffff;
   opacity: 0.4;
-  letter-spacing: -0.03em;
 }
 
 @media only screen and (max-width: 1100px) {
