--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -317,12 +317,12 @@ footer {
     flex-direction: column;
     gap: 10px;
   }
-  nav button {
-    right: 15px;
-  }
-  nav .logo {
-    left: 15px;
-  }
+  // nav button {
+  //   right: 15px;
+  // }
+  // nav .logo {
+  //   left: 15px;
+  // }
 }
 
 @media only screen and (max-width: 370px) {
@@ -332,11 +332,14 @@ footer {
   .socmed-links ul {
     gap: 10px;
   }
-  nav button {
-    right: 15px;
-  }
-  nav .logo {
-    left: 15px;
+  // nav button {
+  //   right: 15px;
+  // }
+  // nav .logo {
+  //   left: 15px;
+  // }
+  footer {
+    padding-left: 10px;
   }
 }
 
