--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -48,77 +48,6 @@ nav {
   }
 }
 
-// nav w/o bootstrap
-// nav {
-//   display: flex;
-//   background-color: variables.$color-1;
-//   width: 100vw;
-//   height: 84px;
-//   position: fixed;
-//   z-index: 1;
-//   button {
-//     position: absolute;
-//     right: 50px;
-//   }
-//   .logo {
-//     color: variables.$color-4;
-//     font-weight: variables.$font-weight7;
-//     font-size: variables.$font-size4;
-//     position: absolute;
-//     line-height: 29px;
-//     width: 76px;
-//     height: 17px;
-//     left: 80px;
-//     top: 27px;
-//   }
-//   .menu {
-//     display: flex;
-//     position: absolute;
-//     text-align: center;
-//     top: 1px;
-//     right: 304px;
-//     gap: 10px;
-//   }
-//   .sign-log {
-//     display: flex;
-//     position: absolute;
-//     gap: 10px;
-//     top: 1px;
-//     right: 100px;
-//   }
-// }
-
-// nav ul li {
-//   line-height: 80px;
-//   margin: 0 5px;
-//   a {
-//     color: #ffffff;
-//     font-weight: 500;
-//     font-size: 16px;
-//     text-decoration: none;
-//   }
-// }
-
-// .blog {
-//   color: variables.$color-4;
-//   text-decoration: underline;
-// }
-
-// .sign-up {
-//   color: variables.$color-6;
-//   font-weight: variables.$font-weight7;
-//   font-size: variables.$font-size3;
-// }
-
-// .log-in {
-//   border: solid 1px;
-//   border-radius: 50px;
-//   padding: 16px;
-//   color: variables.$color-7;
-//   font-weight: variables.$font-weight6;
-//   font-size: variables.$font-size3;
-// }
-
 main {
   justify-content: center;
   padding-top: 50px;
@@ -138,6 +67,7 @@ main {
     position: absolute;
     top: 10px;
     right: 10px;
+    z-index: 2;
   }
   .circle-check {
     color: variables.$color-1;
@@ -149,16 +79,42 @@ main {
     border-radius: 8px;
     position: absolute;
   }
-  // .shadow {
-  //   position: absolute;
-  //   background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
-  //   border-top-left-radius: 6px;
-  //   border-top-right-radius: 6px;
-  //   height: 250px;
-  //   left: 0px;
-  //   right: 0px;
-  //   top: 0px;
-  // }
+  .shadow1 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 65%, $img-position: 0 30%);
+  }
+  .shadow2 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 76%, $img-position: 0 40%);
+  }
+  .shadow3 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 65%);
+  }
+  .shadow4 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 65%, $img-position: 0 1%);
+  }
+  .shadow5 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 76%, $img-position: 0 5%);
+  }
+  .shadow6 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 76%, $img-position: 0 5%);
+  }
+  .shadow7 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 90%, $img-position: 0 5%);
+  }
+  .shadow8 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 66%, $img-position: 0 1%);
+  }
+  .shadow9 {
+    @include mixins.shadow();
+    @include mixins.card-img($img-height: 76%, $img-position: 0 5%);
+  }
   .img-card1 {
     @include mixins.card-img($img-height: 65%, $img-position: 0 30%);
   }
@@ -287,6 +243,60 @@ footer {
   opacity: 0.4;
 }
 
+.like {
+  color: variables.$color-7;
+}
+
+.heart:hover {
+  cursor: pointer;
+}
+
+.circle-check:hover {
+  cursor: pointer;
+}
+
+.circle-x:hover {
+  cursor: pointer;
+}
+
+.myCard-cont:hover .circle-check {
+  visibility: visible;
+}
+
+.myCard-cont:hover .circle-x {
+  visibility: visible;
+}
+
+.myCard-cont:hover {
+  .shadow1 {
+    visibility: visible;
+  }
+  .shadow2 {
+    visibility: visible;
+  }
+  .shadow3 {
+    visibility: visible;
+  }
+  .shadow4 {
+    visibility: visible;
+  }
+  .shadow5 {
+    visibility: visible;
+  }
+  .shadow6 {
+    visibility: visible;
+  }
+  .shadow7 {
+    visibility: visible;
+  }
+  .shadow8 {
+    visibility: visible;
+  }
+  .shadow9 {
+    visibility: visible;
+  }
+}
+
 @media only screen and (max-width: 1100px) {
   main {
     display: grid;
@@ -329,12 +339,6 @@ footer {
     flex-direction: column;
     gap: 10px;
   }
-  // nav button {
-  //   right: 15px;
-  // }
-  // nav .logo {
-  //   left: 15px;
-  // }
 }
 
 @media only screen and (max-width: 370px) {
@@ -344,37 +348,7 @@ footer {
   .socmed-links ul {
     gap: 10px;
   }
-  // nav button {
-  //   right: 15px;
-  // }
-  // nav .logo {
-  //   left: 15px;
-  // }
   footer {
     padding-left: 10px;
   }
-}
-
-.like {
-  color: variables.$color-7;
-}
-
-.heart:hover {
-  cursor: pointer;
-}
-
-.circle-check:hover {
-  cursor: pointer;
-}
-
-.circle-x:hover {
-  cursor: pointer;
-}
-
-.myCard-cont:hover .circle-check {
-  visibility: visible;
-}
-
-.myCard-cont:hover .circle-x {
-  visibility: visible;
 }
