--- a/main-css/main.css
+++ b/main-css/main.css
@@ -65,6 +65,7 @@ main {
   position: absolute;
   top: 10px;
   right: 10px;
+  z-index: 2;
 }
 .myCard-cont .circle-check {
   color: #192140;
@@ -75,6 +76,159 @@ main {
   height: 250px;
   border-radius: 8px;
   position: absolute;
+}
+.myCard-cont .shadow1 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 30%;
+     object-position: 0 30%;
+  height: 65%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow2 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 40%;
+     object-position: 0 40%;
+  height: 76%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow3 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 0%;
+     object-position: 0 0%;
+  height: 65%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow4 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 1%;
+     object-position: 0 1%;
+  height: 65%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow5 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
+  height: 76%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow6 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
+  height: 76%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow7 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
+  height: 90%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow8 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 1%;
+     object-position: 0 1%;
+  height: 66%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.myCard-cont .shadow9 {
+  position: absolute;
+  visibility: hidden;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  background: linear-gradient(180deg, #192140 0%, rgba(25, 33, 64, 0) 70.8%);
+  z-index: 0;
+  -o-object-position: 0 5%;
+     object-position: 0 5%;
+  height: 76%;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .myCard-cont .img-card1 {
   -o-object-position: 0 30%;
@@ -264,6 +418,58 @@ footer .socmed {
   opacity: 0.4;
 }
 
+.like {
+  color: #0266ff;
+}
+
+.heart:hover {
+  cursor: pointer;
+}
+
+.circle-check:hover {
+  cursor: pointer;
+}
+
+.circle-x:hover {
+  cursor: pointer;
+}
+
+.myCard-cont:hover .circle-check {
+  visibility: visible;
+}
+
+.myCard-cont:hover .circle-x {
+  visibility: visible;
+}
+
+.myCard-cont:hover .shadow1 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow2 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow3 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow4 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow5 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow6 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow7 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow8 {
+  visibility: visible;
+}
+.myCard-cont:hover .shadow9 {
+  visibility: visible;
+}
+
 @media only screen and (max-width: 1100px) {
   main {
     display: grid;
@@ -313,27 +519,4 @@ footer .socmed {
   footer {
     padding-left: 10px;
   }
-}
-.like {
-  color: #0266ff;
-}
-
-.heart:hover {
-  cursor: pointer;
-}
-
-.circle-check:hover {
-  cursor: pointer;
-}
-
-.circle-x:hover {
-  cursor: pointer;
-}
-
-.myCard-cont:hover .circle-check {
-  visibility: visible;
-}
-
-.myCard-cont:hover .circle-x {
-  visibility: visible;
 }/*# sourceMappingURL=main.css.map */
